# mykit

./: README.md
conf/: .bashrc  README.MD
cpp/: utils.cpp  utils.h  utils.hpp
cvkit/: README.md
cvkit/common/: base_utils.hpp
cvkit/hnsw_sifts_retrieval/: test.cpp
cvkit/imgHash/: pHash.hpp
cvkit/pca/train/: opencv_utils.hpp
make/: CMakeLists.txt  Makefile
matlab/: seperate_bkg_fg_by_mask_demo.m
py/dl/: check_image.py  convert_gif2jpg.py  crops.sh  generate_data.py  rename.py
python/: README.md  rename_Afiles_with_Bfiles_name.py
python/dl/: compute_mean.sh  convert_protomean.py  keras_imgAug.py  predict.py  predict_class.py
python/dl/ResNet101/: deploy.prototxt  log.txt  solver.prototxt  train.sh  train_val.prototxt
python/dl/ResNet50/: log.txt  solver.prototxt  train.sh  train_val.prototxt
python/dl/VggNet16/: deploy.prototxt  solver_vgg16.prototxt  train.sh  vgg_train_val.prototxt
python/gener/: get_oxford_queries.py  img_resize.py
python/gn/: README.MD  split_dataset.py
python/gn/image_down/: Image-Download.py  README.md  name_list.txt
sh/: README.md  look_up_cpu_information_in_osx.h  look_up_cpu_information_in_osx.sh  switch_opencv_version.sh
